chore: lint and remove warnings